--- a/Fetch/Fetch/GoogleService-Info.plist
+++ b/Fetch/Fetch/GoogleService-Info.plist
@@ -13,21 +13,21 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>CIS422.Fetch</string>
+	<string>RonnyCIS422.Fetch</string>
 	<key>PROJECT_ID</key>
 	<string>fetch-app-b86d8</string>
 	<key>STORAGE_BUCKET</key>
 	<string>fetch-app-b86d8.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:541151634761:ios:6c6b05c916d8fed1c56698</string>
 </dict>
